--- a/styles.css
+++ b/styles.css
@@ -905,6 +905,264 @@ html {
 }
 
 
+/* Media Queries for Responsive Design */
+@media (max-width: 1200px) {
+    .header_div {
+        justify-content: space-between;
+        padding: 0 30px;
+    }
+    
+    .aboutme_things {
+        gap: 60px;
+    }
+    
+    .about_image {
+        padding-left: 8%;
+    }
+    
+    .aboutmeintro {
+        margin-right: 5%;
+    }
+}
 
+@media (max-width: 992px) {
+    .header_namelogo {
+        max-height: 250px;
+    }
+    
+    .nav a {
+        font-size: 18px;
+    }
+    
+    .Hlines {
+        font-size: 50px;
+        line-height: 60px;
+    }
+    
+    .aboutme_things {
+        flex-direction: column;
+        align-items: center;
+        gap: 40px;
+    }
+    
+    .about_image {
+        padding-left: 0;
+        justify-content: center;
+    }
+    
+    .aboutmeintro {
+        margin: 0 10%;
+        text-align: center;
+    }
+    
+    .skills {
+        width: 90%;
+        margin: 1rem auto;
+    }
+    
+    .spe_boxes {
+        gap: 60px;
+    }
+}
+
+@media (max-width: 768px) {
+    .header_div {
+        padding: 0 20px;
+    }
+    
+    .header_namelogo {
+        max-height: 200px;
+    }
+    
+    .nav {
+        display: none;
+        flex-direction: column;
+        position: absolute;
+        top: 100px;
+        left: 0;
+        width: 100%;
+        background-color: #110d0d;
+        padding: 20px 0;
+        box-shadow: 0 5px 10px rgba(0,0,0,0.3);
+    }
+    
+    .nav.active {
+        display: flex;
+    }
+    
+    .nav a {
+        margin: 10px 0;
+        font-size: 20px;
+    }
+    
+    .outer_conme_div {
+        display: none;
+    }
+    
+    .menu-toggle {
+        display: block;
+        color: white;
+        font-size: 28px;
+        cursor: pointer;
+    }
+    
+    .Hlines {
+        font-size: 40px;
+        line-height: 50px;
+    }
+    
+    .line1 {
+        font-size: 16px;
+    }
+    
+    .circle-img {
+        width: 250px;
+        height: 250px;
+    }
+    
+    .buttons_container {
+        gap: 30px;
+    }
+    
+    .outer_conme_div2, .outer_resume_div {
+        height: 55px;
+        width: 170px;
+    }
+    
+    #about_me {
+        font-size: 60px;
+    }
+    
+    .certificatesand {
+        font-size: 40px;
+    }
+    
+    .my-specializations {
+        font-size: 32px;
+    }
+    
+    .cer_boxes {
+        margin-left: 15px;
+        justify-content: center;
+    }
+}
+
+@media (max-width: 576px) {
+    .header_div {
+        padding: 0 15px;
+    }
+    
+    .header_namelogo {
+        max-height: 150px;
+    }
+    
+    .menu-toggle {
+        font-size: 24px;
+    }
+    
+    .Hlines {
+        font-size: 32px;
+        line-height: 40px;
+    }
+    
+    .line1 {
+        font-size: 14px;
+        line-height: 20px;
+    }
+    
+    .circle-img {
+        width: 200px;
+        height: 200px;
+    }
+    
+    .buttons_container {
+        flex-direction: column;
+        gap: 20px;
+    }
+    
+    #about_me {
+        font-size: 50px;
+    }
+    
+    .aboutmeintro {
+        margin: 0 5%;
+        font-size: 16px;
+    }
+    
+    .certificatesand {
+        font-size: 32px;
+    }
+    
+    .my-specializations {
+        font-size: 24px;
+    }
+    
+    .spe_boxes {
+        flex-direction: column;
+        align-items: center;
+        gap: 30px;
+    }
+    
+    .box1, .box2 {
+        width: 90%;
+        max-width: 300px;
+        padding: 20px;
+    }
+    
+    .cer_boxes {
+        margin-left: 0;
+    }
+    
+    .box3, .box4, .box5, .box6, 
+    .box7, .box8, .box9, .box10, 
+    .box11, .box12, .box13, .box14, 
+    .box15, .box16, .box17, .box18, 
+    .box19, .box20, .box21, .box22, 
+    .box23 {
+        width: 90%;
+        max-width: 300px;
+        margin: 15px 0;
+    }
+}
+
+@media (max-width: 400px) {
+    .header_namelogo {
+        max-height: 120px;
+    }
+    
+    .Hlines {
+        font-size: 28px;
+        line-height: 35px;
+    }
+    
+    .line1 br {
+        display: none;
+    }
+    
+    .circle-img {
+        width: 180px;
+        height: 180px;
+    }
+    
+    #about_me {
+        font-size: 40px;
+    }
+    
+    .certificatesand {
+        font-size: 28px;
+    }
+    
+    .my-specializations {
+        font-size: 20px;
+    }
+    
+    .aboutmeintro {
+        font-size: 15px;
+    }
+    
+    .skill p {
+        font-size: 16px;
+    }
+}
 
 
