--- a/styles.css
+++ b/styles.css
@@ -1166,3 +1166,19 @@ html {
 }
 
 
+#my_services {
+    background: linear-gradient(to right,#B415FF, #DF8908);
+    font-size: 40px;
+    text-align: center;  
+    padding: 8px 0;  
+    margin-top:60px;
+    color: white; 
+}
+ 
+.service1box {
+    height: 280px;
+    width: 300px;
+    background-color: transparent;
+    border: 3px white solid;
+    border-radius: 10px;
+}
