--- a/style.css
+++ b/style.css
@@ -907,13 +907,14 @@ html {
 
 
 #my_services {
-    background: linear-gradient(to right,#B415FF, #DF8908);
-    font-size: 40px;
+    /* background: linear-gradient(to right,#B415FF, #DF8908); */
+    font-size: 50px;
     text-align: center;  
     padding: 8px 0;  
     margin-top:60px;
     color: white; 
     scroll-margin-top: 100px;
+    
 }
 
 
@@ -921,7 +922,7 @@ html {
     display: flex;
     flex-direction: row;
     flex-wrap: wrap;
-    justify-content: space-evenly;
+    justify-content: space-between;
     z-index: 10;
     margin-top: 30px;
     color: white;
@@ -937,6 +938,8 @@ html {
     padding-right: 30px;
     transition: all 0.3s ease-in;
     margin-bottom: 20px;
+    margin-right: 50px;
+    margin-left: 50px;
 }
 
 
@@ -966,15 +969,12 @@ html {
 .service1box:hover {
     scale: 1.04;
     border: 3px #B415FF solid;
-    background: linear-gradient(to right, rgb(74, 22, 22), rgb(63, 16, 63));
+    box-shadow: 3px 3px 10px #DF8908;
 }
 
-
-/* .service2box {
-    height: 280px;
-    width: 300px;
-    background-color: transparent;
-    border: 3px white solid;
-    border-radius: 10px;
-
-} */
+#connect-contact-me {
+    color: white;
+    font-size: 60px;
+    display: block;
+    text-align: center;
+}
