--- a/style.css
+++ b/style.css
@@ -1128,6 +1128,11 @@ html {
 
 .bottom_content_right_bottom {
     display: flex;
+    gap: 20px;
     margin-left: auto;
     margin-right: 40px;
+}
+
+.bottom_content_right_bottom :hover {
+    text-decoration: underline;
 }
