--- a/style.css
+++ b/style.css
@@ -21,6 +21,7 @@ html {
     top: 0;               
     left: 0;
     width: 100%;   
+
 }
 .header_div {
     display: flex;
@@ -344,7 +345,7 @@ html {
 
 /* sab boxes ke full design */
 
-.box1 {                                    
+/* .box1 {                                    
     background-color: #232222;
     padding-top: 30px;
     padding-right:50px;
@@ -360,10 +361,10 @@ html {
     transform: scale(1);
     cursor: pointer;
     z-index: 9998;
-}
+} */
 
 
-.box2 {
+.box1, .box2, .boxthree{
     background-color: #232222;
     padding-top: 30px;
     padding-right:50px;
@@ -380,7 +381,6 @@ html {
     cursor: pointer;
     z-index: 9998;
 } 
-
 .box3 {
     background-color: #232222;
     display: inline-flex;
@@ -752,10 +752,27 @@ html {
     margin-top: 30px;
 }
 
+.box23{
+    background-color: #232222;
+    display: inline-flex;
+    flex-direction: column;
+    padding-top: 30px;
+    padding-bottom: 15px;
+    padding-left: 50px;
+    padding-right: 50px;
+    cursor: pointer;
+    box-shadow: 2px 2px 1px #B415FF ;
+    transition: all 0.2s ease-out;
+    transform: scale(1);
+    border-radius: 15px;
+    margin-right: 30px;
+    z-index: 101;
+    margin-top: 30px;
+}
 
-
-.box2:hover,
 .box1:hover,
+.box2:hover,
+.boxthree:hover,
 .box3:hover,
 .box4:hover,
 .box5:hover,
@@ -783,17 +800,18 @@ html {
     z-index: 99999;
 }
 /* certificates ke name headings */
-.spe_name1 {
+/* .spe_name1 {
     color: #DF8908;
     font-size: 16.75px;
     margin-bottom: 8px;
 
-}
+} */
 
 .spe_name2 {
     color: #DF8908 ;
     font-size: 16.75px;
     margin-bottom: 8px;
+    text-align: center;
 }
 
 
@@ -811,6 +829,7 @@ html {
     color: white;
     font-family: 'Outfit';
     margin-bottom: 14px;
+    text-align: center;
 
 }
 
@@ -821,6 +840,8 @@ html {
     font-family: 'Outfit';
     text-align: center;
     margin-bottom: 14px;
+    color: #DF8908 ;
+    font-size: 16.75px;
 
 }
 
