--- a/style.css
+++ b/style.css
@@ -88,7 +88,8 @@ html {
 .Aboutme,
 .Skills,
 .Services,
-.Contact {
+.Contact,
+.Experience {
     transition: all 0.3s ease-in;
 }
 
@@ -98,7 +99,8 @@ html {
 .Aboutme:hover,
 .Skills:hover,
 .Services:hover,
-.Contact:hover {
+.Contact:hover,
+.Experience:hover {
     transform: scale(1.1) ;
     text-shadow: 0px 0px 10px rgb(235, 31, 190);
 }
